# construct

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
cmake/: FindCatch.cmake  FindCobalt.cmake
examples/: einstein.es
examples/areametric/: area_sg1.es  area_sg2.es  area_sg3.es  area_sg4.es  area_sg5.es
examples/ptheory/: pt_sg1.es  pt_sg2.es  pt_sg3.es  pt_sg4.es  pt_sg5.es  pt_sg6.es
lib/cmd/: cli.hpp  root.hpp  solve.hpp
lib/common/: bignumber.hpp  cache.hpp  datetime.hpp  error.hpp  logger.hpp  printable.hpp  progressbar.hpp  range.hpp  scope_guard.hpp  serializable.hpp  singleton.hpp  task_pool.hpp  time_measurement.hpp  uuid.hpp
lib/equations/: coefficient.hpp  equations.hpp  equations_database.hpp  optimization.hpp
lib/generator/: base_tensor.hpp  basis_selector.hpp  coefficient.hpp  equivalent_selector.hpp  linear_dependent_selector.hpp  symmetrized_tensor.hpp
lib/language/: CLI.hpp  api.hpp  argument.hpp  cli.hpp  command.hpp  linear_dependent.hpp  notebook.hpp  parser.hpp  parser.l  session.hpp  symmetrization.hpp  tensor.hpp
lib/messages/: tensors.proto
lib/tensor/: expression.hpp  expression_database.hpp  fraction.hpp  index.hpp  index_parser.hpp  permutation.hpp  scalar.hpp  substitution.hpp  symmetrization.hpp  symmetry.hpp  tensor.hpp  tensor_container.hpp  tensor_database.hpp  variable.hpp
lib/vector/: gaussian_elimination.hpp  linear_system.hpp  matrix.hpp  vector.hpp
src/: CMakeLists.txt  coefficients.cpp  equations.cpp  main.cpp
src/module/: CMakeLists.txt
src/module/src/: module.cc
src/tensor/: CMakeLists.txt  expression.cpp  scalar.cpp
test/: CMakeLists.txt  api.cpp  common.cpp  main.cpp  tensor.cpp  vector.cpp
test/equations/: metric.cpp
test/tensor/: index.cpp  scalar.cpp  simplification.cpp  substitution.cpp  symmetrization.cpp  tensor.cpp  tensor_container.cpp
test/vector/: matrix.cpp  vector.cpp
